# faiss

./: .gitignore  CMakeLists.txt
.github/actions/build_cmake/: action.yml
.github/workflows/: build-pull-request.yml
faiss/gpu_metal/: CMakeLists.txt  GpuIndexFlat.h  MetalCloner.h  MetalCloner.mm  MetalDistance.h  MetalDistance.metal  MetalDistance.mm  MetalFlatKernels.h  MetalFlatKernels.mm  MetalIndex.h  MetalIndexBinaryFlat.h  MetalIndexBinaryFlat.mm  MetalIndexFlat.h  MetalIndexFlat.mm  MetalIndexIVFFlat.h  MetalIndexIVFFlat.mm  MetalIndexIVFPQ.h  MetalIndexIVFPQ.mm  MetalIndexIVFScalarQuantizer.h  MetalIndexIVFScalarQuantizer.mm  MetalKernels.h  MetalKernels.mm  MetalPythonBridge.h  MetalPythonBridge.mm  MetalResources.h  MetalResources.mm  MetalStub.mm  StandardMetalResources.h  StandardMetalResources.mm
faiss/gpu_metal/impl/: MetalIVFFlat.h  MetalIVFFlat.mm  MetalIVFPQ.h  MetalIVFPQ.mm  MetalIVFSQ.h  MetalIVFSQ.mm
faiss/gpu_metal/test/: AccMetalIndexBinaryFlat.mm  AccMetalIndexFlat.mm  AccMetalIndexIVFFlat.mm  AccMetalIndexIVFPQ.mm  AccMetalIndexIVFSQ.mm  BenchMetalBinaryFlatVsCpu.mm  BenchMetalIvfAddVsCpu.mm  BenchMetalIvfPQVsCpu.mm  BenchMetalIvfSQVsCpu.mm  BenchMetalIvfTilingVsCpu.mm  BenchMetalIvfVsCpu.mm  BenchMetalVsCpu.mm  BenchRunFlat.mm  BenchRunIvf.mm  CMakeLists.txt  PerfMetalIvfVsCpu.mm  PerfMetalVsCpu.mm  TestMetalIndexFlat.cpp  TestMetalIndexFlat.mm  TestMetalIndexIVFFlat.mm  check_metal_device.py  test_metal_python.py
faiss/invlists/: InvertedLists.cpp  InvertedLists.h
faiss/python/: CMakeLists.txt  gpu_wrappers.py  swigfaiss.swig
